# tjm

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
asdcp/: 0000-OpenWrite-descriptor.patch  0001-TCFrameRate.patch  0002-FloatTCFrameRate.patch  AS_DCP.h  AS_DCP_JP2K.cpp  asdcp-hack.diff
data/: input_40.txt  input_450.txt
scripts/: as02tomxf.sh  clone.sh  j2k_to_mxf.sh  opjtoj2k.sh  test_process.sh  tiff_to_j2k.sh
src/: filelist.c  filelist.h  mxf.c  mxf.h  mxf_tmp.cpp  opj.c  opj.h  stream.c  stream.cpp  toj2c.c  tomxf.c
src/opj/: convert.c  converttif.c
tests/: test_filelist.c
